--- a/app/src/public/css/styleEvents.css
+++ b/app/src/public/css/styleEvents.css
@@ -5,6 +5,7 @@ input[type=text], input[type=password] {
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
+    border-radius: 6px;
     box-sizing: border-box;
 }
 
@@ -12,6 +13,7 @@ input[type=text], input[type=password] {
 button {
 
   background-color: green;
+  border-radius: 6px;
   overflow: hidden;
     color: white;
     padding: 14px 20px;
@@ -32,20 +34,7 @@ button:hover {
     background-color: #f44336;
 }
 
-/* Center the image and position the close button */
-.imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
-    position: relative;
-}
-
-img.avatar {
-    width: 40%;
-    border-radius: 50%;
-}
-
 .container{
-    background-image: "event1.png";
 	max-width: 500px;
 	margin: 0 auto;
 	padding-left: 20px;
@@ -125,7 +114,7 @@ span.psw {
 
 ul{
   list-style-type: none;
-  background-color: green;
+  background-color: black;
   overflow: hidden;
 }
 
